redhat/self-test: Move Makefile.variables output to Makefile
ptalbert noticed that the self-tests were failing during the 5.18.0 merge
window.  This is because the Makefile.variables dump in create-data.sh is
returning the local variable data instead of the Makefile target data.

Move the Makefile.variables output to the dist-self-test-dump-variables
Makefile target so that the target data is correctly returned.

Additional fix: Fix the Makefile contents check since the redhat/Makefile
now contains a ?=.  This false positive can be avoided by ommitting "?=.

Signed-off-by: Prarit Bhargava <prarit@redhat.com>

--- a/redhat/Makefile
+++ b/redhat/Makefile
@@ -717,6 +717,16 @@ dist-dump-variables:
 # create-data.sh is the only caller of this target and other users should not
 # expect the output from this target to be stable.
 dist-self-test-dump-variables: dist-dump-variables
+	@# When this target is executed from a script, the variables in
+	@# Makefile.variables are listed as having origin 'environment'.  This
+	@# is because the script inherits the variables from the 'export' command
+	@# in the redhat/Makefile.
+	@cat Makefile.variables | grep -v "^#" | sed '/^$$/d' | tr -d " " | awk -F "?=|:=" '{print $$1}' | while read -r VAR ; do \
+		[ "$$VAR" == "RHDISTDATADIR" ] && continue; \
+		[ "$$VAR" == "RHGITURL" ] && continue; \
+		[ "$$VAR" == "BUILD" ] && continue; \
+		echo "$$VAR=$${!VAR}"; \
+	done
 
 dist-self-test:
 	@if test -x /usr/bin/bats; then \
